# mcp-client-rust

./: Cargo.toml  INTEGRATION_GUIDE.md  README.md  example_file.txt
examples/: basic_example.rs  basic_llm_integration.rs  complete_llm_app.rs  multi_server.rs  multi_server_example.rs  read_resource_example.rs  test_connection.rs
src/: client.rs  errors.rs  lib.rs  logging.rs  main.rs  multi_server.rs  ollama.rs  security.rs  tool_manager.rs  transport.rs  types.rs  validation.rs
