[package]
name = "mcp-client-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["json"] }
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
anyhow = "1.0"
chrono = "0.4"
regex = "1.10"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_example"
path = "examples/basic_example.rs"

[[example]]
name = "multi_server_example"
path = "examples/multi_server_example.rs"

[[example]]
name = "test_connection"
path = "examples/test_connection.rs"

[profile.release]
opt-level = 3
lto = true